--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,6 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="baas202.baspondman_pset1.MainActivity"
     android:orientation="vertical">
 
@@ -17,92 +13,94 @@
         android:layout_height="wrap_content"
         android:text="Mr. Potato Head !"
         android:textSize="25dp"
-        android:id="@+id/textView3"
-        android:layout_gravity="center"/>
+        android:id="@+id/title"
+        android:layout_gravity="center"
+        android:padding="8dp"/>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="285dp">
-
+    <FrameLayout
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:id="@+id/relativeLayout"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/body"
+            android:src="@drawable/body"
             android:id="@+id/imageView_body"
             android:visibility="visible"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ears"
+            android:src="@drawable/ears"
             android:id="@+id/imageView_ears"
             android:visibility="invisible"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/eyes"
+            android:src="@drawable/eyes"
             android:id="@+id/imageView_eyes"
             android:visibility="invisible"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/eyebrows"
+            android:src="@drawable/eyebrows"
             android:id="@+id/imageView_eyebrows"
             android:visibility="invisible"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/arms"
+            android:src="@drawable/arms"
             android:id="@+id/imageView_arms"
             android:visibility="invisible"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/glasses"
+            android:src="@drawable/glasses"
             android:id="@+id/imageView_glasses"
             android:visibility="invisible"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/hat"
+            android:src="@drawable/hat"
             android:id="@+id/imageView_hat"
             android:visibility="invisible"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/mouth"
+            android:src="@drawable/mouth"
             android:id="@+id/imageView_mouth"
             android:visibility="invisible"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/mustache"
+            android:src="@drawable/mustache"
             android:id="@+id/imageView_mustache"
             android:visibility="invisible"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/nose"
+            android:src="@drawable/nose"
             android:id="@+id/imageView_nose"
             android:visibility="invisible"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/shoes"
+            android:src="@drawable/shoes"
             android:id="@+id/imageView_shoes"
-            android:visibility="invisible"/>
-
-    </RelativeLayout>
+            android:visibility="invisible" />
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -225,9 +223,5 @@
                 android:onClick="onCheckboxClicked"/>
 
         </LinearLayout>
-
-
     </LinearLayout>
-
-
 </LinearLayout>
